--- a/REST1/REST1/sanakirja.html
+++ b/REST1/REST1/sanakirja.html
@@ -7,7 +7,6 @@
     <script>
       $(document).ready(function () {
         $('[name="Submit"]').click(function () {
-          //tähän omaa koodia
           let word1 = $("#fi").val();
           let word2 = $("#en").val();
 
@@ -87,9 +86,9 @@
       </td>
     </form>
 
-    <h2>Word search</h2>
+    <h2>Sanan haku</h2>
 
-    <th>Give a word</th>
+    <th>Anna sana/th></th>
 
     <td>
       <input
